testsuite/lab2-testsuite/good/core109.cc
int main() {
  let int j = 4;

  {
	printInt(j);
  }

  return j;
}
