testsuite/lab2-testsuite/bad/decl_cleanup_block_2.cc
int main() {
	{
		let int x;
	}
	x = 4;
	return 2;
}
